feat: add support for avatar, shop image, transaction proof, and rating photos
